--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Convex Chat</title>
+    <link
+            rel="preload"
+            href="/CaskaydiaCove-Regular.ttf"
+            as="font"
+            type="font/ttf"
+            crossorigin
+    />
+    <link
+            rel="preload"
+            href="/Caskaydia Cove Nerd Font Complete Mono Regular.otf"
+            as="font"
+            type="font/otf"
+            crossorigin
+    />
 </head>
 <body>
 <div id="root"></div>
