--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Convex Chat</title>
     <link
             rel="preload"
-            href="./static/CaskaydiaCove-Regular.ttf"
+            href="/assets/CaskaydiaCove-Regular.41dc96dc.ttf"
             as="font"
             type="font/ttf"
             crossorigin
     />
     <link
             rel="preload"
-            href="./static/Caskaydia Cove Nerd Font Complete Mono Regular.otf"
+            href="/assets/Caskaydia Cove Nerd Font Complete Mono Regular.d7121fdd.otf"
             as="font"
             type="font/otf"
             crossorigin
