--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Convex Chat</title>
+    <link rel="preload" href="CaskaydiaCove-Regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="CaskaydiaCoveNerdFontCompleteM-Regular.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
 <div id="root"></div>
